--- a/index.html
+++ b/index.html
@@ -232,6 +232,50 @@
       </div>
     </section>
 
+    <footer>
+      <div>
+        <ul>
+          <li><h3>Resources</h3></li>
+          <li>Blog</li>
+          <li>What's New</li>
+          <li>Template</li>
+          <li>Achive</li>
+        </ul>
+      </div>
+      <div>
+        <ul>
+          <li><h3>Company</h3></li>
+          <li>Design</li>
+          <li>Press Kit</li>
+          <li>Carrer</li>
+        </ul>
+      </div>
+      <div>
+        <ul>
+          <li><h3>use Cases</h3></li>
+          <li>Auto Card</li>
+          <li>Progress</li>
+          <li>Interior</li>
+          <li>Achitecture</li>
+          <li>FAQs</li>
+        </ul>
+      </div>
+      <div class="newsletter">
+        <h3>Join Our Newsletter</h3>
+        <span class="email-span"
+          >Enter email address
+          <ion-icon name="arrow-forward-outline"></ion-icon>
+          <ion-icon name="mail-outline" class="email-icon"></ion-icon
+        ></span>
+        <div class="follow-span">
+          <span>Follow us on: </span>
+          <ion-icon name="logo-instagram"></ion-icon>
+          <ion-icon name="logo-tiktok"></ion-icon>
+          <ion-icon name="logo-twitter"></ion-icon>
+        </div>
+      </div>
+    </footer>
+
     <script src="script.js"></script>
   </body>
 </html>
