--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
       </div>
     </div>
 
-    <section class="carousel">
+    <section class="carousel wrapper">
       <!-- Slider main container -->
       <div class="swiper">
         <!-- Additional required wrapper -->
